added features to ig

--- a/enter-2024-awards/index.html
+++ b/enter-2024-awards/index.html
@@ -533,9 +533,10 @@
 															</div>
 															<div class="wpb_text_column wpb_content_element ">
 																<div class="wpb_wrapper">
-																	<p>The OPEN competition is open to all photographers
+																	<p>The OPEN competition is open to social media
+																		influencers
 																	</p>
-																	<h3><span style="color: #ffffff;">US$22 per
+																	<h3><span style="color: #ffffff;">Free
 																			entry</span>
 																	</h3>
 
@@ -591,7 +592,7 @@
 																		non-professional/amateur and student
 																		photographers
 																		only</p>
-																	<h3><span style="color: #ffffff;">US$20 per
+																	<h3><span style="color: #ffffff;">Free
 																			entry</span>
 																	</h3>
 
@@ -646,9 +647,9 @@
 														<div
 															class="wpb_text_column wpb_content_element  vc_custom_1714621219077">
 															<div class="wpb_wrapper">
-																<p>The VR/360 competition is open to all photographers
+																<p>The VR/360 competition is open to fashion lovers
 																</p>
-																<h3><span style="color: #ffffff;">US$20 per entry</span>
+																<h3><span style="color: #ffffff;">Free entry</span>
 																</h3>
 																<h4></h4>
 
