corrected hero text

--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
 															soon!</span></h2>
 													<div class="slide_buttons_holder"><a class="qbutton"
 															href="/enter-2024-awards/" target="_self">Vote favorite
-															contest</a></div>
+															contestant</a></div>
 												</div>
 											</div>
 										</div>
