worked on rules page

--- a/contact/index.html
+++ b/contact/index.html
@@ -303,7 +303,7 @@
 										class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children  has_sub narrow">
 										<a href="/competition-rules/" class=""><i class="menu_icon fa blank"></i><span
 												class="menu-text">Rules &#038; How
-												to Enter</span><span class="plus"></span></a>
+												to Vote</span><span class="plus"></span></a>
 										<div class="second">
 											<div class="inner">
 												<ul>
@@ -328,7 +328,7 @@
 									<li id="nav-menu-item-77367"
 										class="menu-item menu-item-type-custom menu-item-object-custom  wide"><a
 											href="/enter-2024-awards" class=""><i class="menu_icon fa blank"></i><span
-												class="menu-text">Enter</span><span class="plus"></span></a></li>
+												class="menu-text">Vote</span><span class="plus"></span></a></li>
 								</ul>
 							</nav>
 							<nav class="mobile_menu">
@@ -342,7 +342,7 @@
 									<li id="mobile-menu-item-77531"
 										class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children  has_sub">
 										<a href="/competition-rules/" class=""><span>Rules
-												&#038; How to Enter</span></a><span class="mobile_arrow"><i
+												&#038; How to Vote</span></a><span class="mobile_arrow"><i
 												class="fa fa-angle-right"></i><i class="fa fa-angle-down"></i></span>
 										<ul class="sub_menu">
 											<li id="mobile-menu-item-48445"
@@ -361,7 +361,7 @@
 									</li>
 									<li id="mobile-menu-item-77367"
 										class="menu-item menu-item-type-custom menu-item-object-custom "><a
-											href="/enter-2024-awards" class=""><span>Enter</span></a><span
+											href="/enter-2024-awards" class=""><span>Vote</span></a><span
 											class="mobile_arrow"><i class="fa fa-angle-right"></i><i
 												class="fa fa-angle-down"></i></span>
 									</li>
